# Nokia-PK-2025

./: .gitignore
.github/workflows/: ccpp.yml  clang-format.yml
src/: format-test.c
src/BTS/: main.cpp
src/BTS/Application/: Application.cpp  ApplicationFactory.cpp  ConsoleCommands.cpp  SibMolester.cpp
src/BTS/QtApplicationEnvironment/: ApplicationEnvironment.cpp  ApplicationEnvironmentFactory.cpp
src/COMMON/Config/: MultiLineConfig.cpp
src/COMMON/Logger/: Logger.cpp  PrefixedLogger.cpp
src/COMMON/Messages/: BinaryMessage.cpp  BtsId.cpp  IncomingMessage.cpp  MessageHeader.cpp  MessageId.cpp  OutgoingMessage.cpp  PhoneNumber.cpp
src/COMMON/TestCommands/: TestCommands.cpp
src/COMMON/Tests/: EnumTraitsTestSuite.cpp  ILoggerTestSuite.cpp  (+5 more)
src/UE/: main.cpp
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp  SmsDb.cpp  SmsDb.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  ComposeSmsState.cpp  ComposeSmsState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  ReceivingCallState.cpp  ReceivingCallState.hpp  SendingCallState.cpp  SendingCallState.hpp  SmsMenuState.cpp  SmsMenuState.hpp  StartDialState.cpp  StartDialState.hpp  TalkingState.cpp  TalkingState.hpp  ViewSmsListState.cpp  ViewSmsListState.hpp  ViewSmsState.cpp  ViewSmsState.hpp
src/googletest/: .gitignore
(+69 files in other folders)
